--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-torch==1.9.0
-torchtyping==0.1.4
-einops==0.3.2
-numpy==1.16.2
-torchtext==0.11.0
-torchvision==0.11.0
+torch
+torchtyping
+einops
+torchvision
+torchtext
+numpy
+transformers
+sentencepiece
