--- a/gpu_code_temp/CMakeLists.txt
+++ b/gpu_code_temp/CMakeLists.txt
@@ -42,3 +42,7 @@ set_target_properties(filtering_array PROPERTIES CUDA_ARCHITECTURES "72")
 add_executable(filtering_array_solutions "${PROJECT_SOURCE_DIR}/src/filtering_array_solutions.cu")
 target_include_directories(filtering_array_solutions PUBLIC "${PROJECT_SOURCE_DIR}/include")
 set_target_properties(filtering_array_solutions PROPERTIES CUDA_ARCHITECTURES "72")
+
+add_executable(reduce_by_key "${PROJECT_SOURCE_DIR}/src/reduce_by_key.cu")
+target_include_directories(reduce_by_key PUBLIC "${PROJECT_SOURCE_DIR}/include")
+set_target_properties(reduce_by_key PROPERTIES CUDA_ARCHITECTURES "72")
