--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ pytest
 matplotlib
 plotly
 sklearn
+git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
