--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ pytest
 matplotlib
 plotly
 sklearn
+black
 git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
