--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ matplotlib
 plotly
 sklearn
 black
+comet_ml
 git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
