--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ plotly
 sklearn
 black
 comet_ml
+mediapy
+numpy-stl
 git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
