--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ black
 comet_ml
 mediapy
 numpy-stl
+jupyerlab==3.2.5
 git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
