--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+jupyterlab==3.2.5
 torch
 torchtyping
 einops
@@ -18,5 +19,4 @@ black
 comet_ml
 mediapy
 numpy-stl
-jupyerlab==3.2.5
 git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
